oauth done, building jukebox form

--- a/src/my-app.html
+++ b/src/my-app.html
@@ -96,6 +96,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <wto-background name="background"></wto-background>
           <wto-experience name="experience"></wto-experience>
           <wto-sample name="sample"></wto-sample>
+          <wto-jukebox name="jukebox"></wto-jukebox>
           <my-view404 name="view404"></my-view404>
         </iron-pages>
       </app-header-layout>
