--- a/src/wto-sample.html
+++ b/src/wto-sample.html
@@ -29,11 +29,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       .options-add {
         background-color: steelblue;
-        color: white;
+        color: white; 
       }
 
       .options-get {
-        background-color: lightgrey;
+        background-color: lightgrey !important;
         color: black;
       }
     </style>
