--- a/src/shared-styles.html
+++ b/src/shared-styles.html
@@ -14,6 +14,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <dom-module id="shared-styles">
   <template>
     <style>
+      a {
+        text-decoration: none;
+        /* no underline */
+      }
+
       .card {
         margin: 24px;
         padding: 16px;
@@ -22,12 +27,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         background-color: #fff;
         box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
       }
+
       .smallCard {
-        margin: 4px;
-        padding: 2px;
-        color: #757575;
+        margin: 20px;
+        padding: 16px;
+        color: ivory;
         border-radius: 5px;
-        background-color: #fff;
+        background-color: #212121;
         box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
       }
 
